plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.simple'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Database
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	runtimeOnly 'com.mysql:mysql-connector-j'
	
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-maven-plugin:3.2.1'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	
	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	
	// JSON
	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	
	// Email
    implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//json web token
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	
	//spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	
	//oauth2 client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	
	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	// Kafka
	implementation 'org.springframework.kafka:spring-kafka'
	
	// Web Socket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	
	// 형태소 분석기
	implementation 'ai.bareun.tagger:bareun:1.4.3'
	
	// gRPC
	implementation 'com.google.protobuf:protobuf-java-util:3.25.3'
	implementation 'io.grpc:grpc-core:1.62.2'
	implementation 'io.grpc:grpc-stub:1.62.2'
	implementation 'io.grpc:grpc-netty-shaded:1.62.2'
	implementation 'io.grpc:grpc-protobuf:1.62.2'
}

tasks.named('test') {
	useJUnitPlatform()
}

compileJava {options.compilerArgs << '-parameters'}

jar {
	enabled=false
	manifest {
		attributes 'Main-Class': 'com.simple.book.SimplebookApplication'
	}
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from {
		configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}
